fix: moved sidebarcollapse button and fixed responsiveness of sidebar on medium devices
#74

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -140,3 +140,21 @@ h2 {
   cursor: ns-resize !important;
 }
 
+
+@media screen and (max-width: 1000px) {
+  .rightContainerExpanded {
+    padding-left: 5rem;
+  }
+}
+
+
+@media screen and (max-width: 468px) {
+  .rightContainerExpanded {
+    padding-left: 0;
+  }
+
+  .rightContainerCollapsed {
+    padding-left: 0;
+  }
+}
+
